app/styles/_intro.scss
html, body {
    max-width: 100%;
    overflow-x: hidden;
}

::-webkit-scrollbar {
    display: none;
}

.chevron {
  position: relative;
  text-align: center;
  padding: 12px;
  height: 130vh;
  width: 100vw;
  top: -5vw; // the height of the chevron's empty space at the top depend on viewport WIDTH (not height)
}

.intro-transparency {
  opacity: 0.3;
}

.chevron:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 50%;
  background: $white;
  -webkit-transform: skew(0deg, 9deg);
  -moz-transform: skew(0deg, 9deg);
  -ms-transform: skew(0deg, 9deg);
  transform: skew(0deg, 9deg);
}

.chevron:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: 50%;
  background: $white;
  -webkit-transform: skew(0deg, -9deg);
  -moz-transform: skew(0deg, -9deg);
  -ms-transform: skew(0deg, -9deg);
  transform: skew(0deg, -9deg);
}

#Austin{
  position: relative;
  font-size: 10em;
  text-align: center;
  font-family: Againts;
  color: $dark-grey;
  top: 24vh;
}

#Du{
  position: relative;
  font-size: 12em;
  text-align: center;
  font-family: Againts;
  color: #66FFCC;
  top: 12vh;
}

#differentD{
  font-size: 150%;
  line-height: 50%;
  margin-right: -1.5%;
}

.my-name-container {
  position: absolute;
  top: 0px;
}

#intro-bg {
  position: fixed;
  bottom: 0px;
  img {
    object-fit: cover;
    width: 100%;
    height: 130vh;
  }
}

.full-width {
  width: 100%;
}

